<color-swatch> Fix wrapping issues

--- a/src/color-swatch/color-swatch.css
+++ b/src/color-swatch/color-swatch.css
@@ -11,7 +11,6 @@
 	gap: .3em;
 	width: min-content;
 	margin: .3em;
-	white-space: nowrap;
 }
 
 :host([size="large"]) {
@@ -54,6 +53,10 @@
 	}
 }
 
+slot:not([name]) {
+	white-space: nowrap;
+}
+
 ::slotted(input) {
 	font: inherit;
 }
@@ -73,12 +76,13 @@ slot[name=swatch]::slotted(*),
 	border-radius: .2rem;
 
 	&:is(:host([size="large"]) *) {
+		max-inline-size: 15em;
 		min-block-size: 6em;
 	}
 
 	&:not(:host([size="large"]) *) {
 		display: flex;
-		inline-size: 1.4rem;
+		min-inline-size: 2em;
 		font-size: 65%;
 		flex: 1;
 	}
